(fix) Handle long links on mobile

--- a/css/hc.css
+++ b/css/hc.css
@@ -39,6 +39,10 @@ h1 a:hover,h2 a:hover,h3 a:hover,h4 a:hover
   color:#29598c
 }
 
+p{
+    word-break: break-all;
+    white-space: normal;
+}
 
 
 .posts
